repaired broken UI -> Backend connection

--- a/app/assets/stylesheets/application/_base.css.scss
+++ b/app/assets/stylesheets/application/_base.css.scss
@@ -412,6 +412,7 @@ div#email_target_text{
   }
 
   .body {
+    padding-left:20px;
     padding-top: 10px;
     border-top-style: solid;
     border-width: 1px;
