--- a/app/assets/stylesheets/tree_view.css.scss
+++ b/app/assets/stylesheets/tree_view.css.scss
@@ -33,7 +33,7 @@
   }
 
   ul ul {
-    margin-left: 22px;
+    margin-left: 28px;
   }
 
   input ~ ul {
